--- a/maker/templates/error404.html
+++ b/maker/templates/error404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load staticfiles %}
-{% block title %}流氓兔{% endblock %}
+{% block title %}Bot Docker{% endblock %}
 
 {% block meta %}
 <style type="text/css">
