--- a/maker/templates/home.html
+++ b/maker/templates/home.html
@@ -12,7 +12,7 @@
 {% block nav_main_home %}current{% endblock %}
 
 {% block content %}
-<div class="home_main">
+<!-- <div class="home_main">
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 {% include "ad_test_data.html" %}
@@ -20,6 +20,115 @@
             <div class="swiper-pagination">
             </div>
         </div>
+</div> -->
+<div class="banner">
+        <div class="banner_container">
+            <div class="wmuSlider example1">
+                <div class="wmuSliderWrapper">
+                    <article style="position: absolute; width: 100%; opacity: 0;">
+                        <div class="banner_right">
+                            <h1>Welcome to <span class="color1">G</span>elios<span class="color1">.</span></h1>
+                            <h2>Awesome , Clean & Unique Template</h2>
+                            <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
+                        </div>
+                        <div class="clearfix"></div>
+                    </article>
+                    <article style="position: relative; width: 100%; opacity: 1;">
+                        <div class="banner_right">
+                            <h1>Welcome to <span class="color1">G</span>elios<span class="color1">.</span></h1>
+                            <h2>There are many variations</h2>
+                            <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
+                        </div>
+                        <div class="clearfix"></div>
+                    </article>
+                </div>
+                <a class="wmuSliderPrev">Previous</a><a class="wmuSliderNext">Next</a>
+                <script src="/static/js/basejs/jquery.wmuSlider.js"></script>
+                <script>
+                    $('.example1').wmuSlider();
+                </script>
+            </div>
+        </div>
+    </div>
+
+    <div class="grid_1 text-center">
+        <div class="container">
+            <div class="col-md-4 box_1">
+                <i class="icon1"> </i>
+                <h3>Web Design</h3>
+                <p>Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+            </div>
+            <div class="col-md-4 box_1">
+                <i class="icon2"> </i>
+                <h3>Web Development</h3>
+                <p>Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+            </div>
+            <div class="col-md-4 box_1">
+                <i class="icon3"> </i>
+                <h3>Simple and Clean</h3>
+                <p>Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="new">
+        <div class="container">
+            <h3>What New</h3>
+            <div class="col-md-4 col_3">
+                <ul class="date_grid">
+                    <li class="date_left">
+                        <div class="date">
+                            <span>
+                               15
+                           </span>
+                           06
+                       </div>
+                   </li>
+                   <li class="date_right">
+                    <p>Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+                </li>
+                <div class="clearfix"> </div>
+            </ul>
+            <p class="m_1">Lollipop liquorice lollipop ice cream cheesecake halvah jelly-o. Gummies lollipop macaroon marshmallow icing. Cookie chupa chups cake dessert lollipop marzipan donut apple pie.</p>
+            <a href="#"><span class="more">More Information</span></a>
+        </div>
+        <div class="col-md-4 col_3">
+            <ul class="date_grid">
+                <li class="date_left">
+                    <div class="date">
+                        <span>
+                           15
+                       </span>
+                       06
+                   </div>
+               </li>
+               <li class="date_right">
+                <p>Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+            </li>
+            <div class="clearfix"> </div>
+        </ul>
+        <p class="m_1">Lollipop liquorice lollipop ice cream cheesecake halvah jelly-o. Gummies lollipop macaroon marshmallow icing. Cookie chupa chups cake dessert lollipop marzipan donut apple pie.</p>
+        <a href="#"><span class="more">More Information</span></a>
+        </div>
+            <div class="col-md-4 col_3">
+                <ul class="date_grid">
+                    <li class="date_left">
+                        <div class="date">
+                            <span>
+                               15
+                           </span>
+                           06
+                       </div>
+                   </li>
+                   <li class="date_right">
+                    <p>Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+                </li>
+                <div class="clearfix"> </div>
+            </ul>
+            <p class="m_1">Lollipop liquorice lollipop ice cream cheesecake halvah jelly-o. Gummies lollipop macaroon marshmallow icing. Cookie chupa chups cake dessert lollipop marzipan donut apple pie.</p>
+            <a href="#"><span class="more">More Information</span></a>
+        </div>
+    </div>
 </div>
 {% endblock %}
 {% block my_js %}
