--- a/maker/uc/templates/uc_basic_info.html
+++ b/maker/uc/templates/uc_basic_info.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block uc_title %}<span>基本资料</span>{% endblock %}
+{% block uc_position %}用户中心{% endblock %}
 {% block uc_content %}
  <form class="form-horizontal">
 <div class="box box-primary">
