--- a/maker/uc/templates/uc_create_bot.html
+++ b/maker/uc/templates/uc_create_bot.html
@@ -9,11 +9,11 @@
 {% endblock %}
 
 
-{% block uc_title %}<span>机器人设定</span>{% endblock %}
+{% block uc_title %}<span>机器人列表</span>{% endblock %}
 
 {% block uc_header %}
       <h1>
-        <small>机器人设定</small>
+        <small>机器人列表</small>
       </h1>
       <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> 主页</a></li>
