--- a/maker/uc/templates/uc_func_config.html
+++ b/maker/uc/templates/uc_func_config.html
@@ -184,7 +184,7 @@
 				           <div class="icon">
 				              <i class="ion ion-social-linkedin"></i>
 				            </div>
-					<h2 class="small-box-footer">八卦</h2><
+					<h2 class="small-box-footer">八卦</h2>
 				</div>
 			</dt>
 			<dd>
@@ -370,8 +370,8 @@ var webrobot = {
     }
 }
 webrobot.switchs();
-colors= ["#0087CEFA", "#00FFF0F5", "#00D8BFD8", "#009370DB", "#00E6E6FA", "#00E0FFFF", "#00F5FFFA", "#00FAFAD2", "#00FFEBCD"];
-$('.featureSel_item').css({
+colors= ["#87CEFA", "#FFF0F5", "#D8BFD8", "#9370DB", "#E6E6FA", "#E0FFFF", "#F5FFFA", "#FAFAD2", "#FFEBCD"];
+$('.gongneng_box dl').css({
     "background-color": this.colors[Math.floor(this.colors.length * Math.random())]
 });
 
