--- a/maker/uc/templates/uc_site_msg.html
+++ b/maker/uc/templates/uc_site_msg.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block uc_title %}<span>站内信</span>{% endblock %}
+{% block uc_position %}消息中心{% endblock %}
 
 {% block uc_content %}
 
