--- a/maker/uc/templates/uc_base.html
+++ b/maker/uc/templates/uc_base.html
@@ -82,7 +82,7 @@ desired effect
       </h1>
       <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> 主页</a></li>
-        <li class="active">我的机器人</li>
+        <li class="active">{% block uc_position %}我的机器人{% endblock %}</li>
       </ol>
       {% endblock %}
     </section>
