--- a/maker/uc/templates/uc_left.html
+++ b/maker/uc/templates/uc_left.html
@@ -35,7 +35,7 @@
           <a href="#"><i class="fa fa-dashboard"></i> <span>我的机器人</span> <i class="fa fa-angle-left pull-right"></i></a>
           <ul class="treeview-menu">
             <li id="l_02" ><a href="{% url 'set_bot' %}"><i class="fa fa-circle-o"></i>机器人设定</a></li>
-            <li id="l_01" ><a href="{% url 'create_bot' %}"><i class="fa fa-circle-o"></i>机器人创建</a></li>
+            <li id="l_01" ><a href="{% url 'create_bot' %}"><i class="fa fa-circle-o"></i>机器人列表</a></li>
             <li id="l_03" ><a href="{% url 'corpus_def' %}"><i class="fa fa-circle-o"></i>语料库自定义</a></li>
             <li id="l_04" ><a href="{% url 'func_config' %}"><i class="fa fa-circle-o"></i>功能配置</a></li>
             <li id="l_05" ><a href="{% url 'white_list' %}"><i class="fa fa-circle-o"></i>白名单管理</a></li>
