--- a/maker/uc/templates/uc_system_notify.html
+++ b/maker/uc/templates/uc_system_notify.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block uc_title %}<span>系统公告</span>{% endblock %}
+{% block uc_position %}消息中心{% endblock %}
 {% block uc_content %}
 <div class="box box-primary">
 <div class="box-header with-border">
